# TAFFO

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  requirements.txt
lib/: CMakeLists.txt  PassPluginInfo.cpp  TaffoToolsInterface.cpp
lib/Conversion/: .gitignore  CMakeLists.txt
lib/Conversion/LLVMFloatToFixed/: ASinACosHandler.cpp  ArcSinCos.cpp  ArcSinCos.h  CMakeLists.txt  ConstantConversion.cpp  Conversion.cpp  CreateSpecialFunction.cpp  CreateSpecialFunction.h  CudaConversion.cpp  FixedPointType.cpp  FixedPointType.h  FixedPointType.hpp  IndirectCallConversion.cpp  InstructionConversion.cpp  IntrinsicMul.cpp  LLVMFloatToFixedPass.cpp  LLVMFloatToFixedPass.h  LLVMFloatToFixedPass.hpp  MDCollector.cpp  MathIntrinsicConversion.cpp  OpenCLConversion.cpp  PositBuilder.cpp  PositBuilder.h  PositBuilderRISCV.cpp  PositBuilderRISCV.h  PositBuilderSoftware.cpp  PositBuilderSoftware.h  PositConstant.cpp  PositConstant.h  SinCos.cpp  SinCos.h  SinCosHandler.cpp  TAFFOMath.cpp  TAFFOMath.h  handleHero.cpp
lib/Conversion/test/: function.c  magiclang2_float.sh  memcpy.c  pointers.c  simple.c  simple2.c  structure.c
lib/DataTypeAlloc/: .gitignore  CMakeLists.txt
lib/DataTypeAlloc/TaffoDTA/: BufferIDFiles.cpp  BufferIDFiles.h  CMakeLists.txt  CPUCosts.cpp  DTAConfig.cpp  DTAConfig.h  Infos.h  LoopAnalyzerUtil.h  MemSSAUtils.hpp  MetricBase.cpp  MetricBase.h  Model.cpp  Model.h  OptimizerInstructionHandling.cpp  TaffoDTA.cpp  TaffoDTA.h
lib/DynamicAnalysis/: .gitignore  CMakeLists.txt  README.md
lib/DynamicAnalysis/Tracing/: CMakeLists.txt  ConnectedComponents.cpp  ConnectedComponents.h  ExpandEqualValue.cpp  ExpandEqualValue.h  InjectFuncCall.cpp  InjectFuncCall.h  LogAnnotations.cpp  LogAnnotations.h  MemoryGraph.cpp  MemoryGraph.h  NameVariables.cpp  NameVariables.h  ReadTrace.cpp  ReadTrace.h  StripAnnotations.cpp  StripAnnotations.h  Tracing.cpp  TracingUtils.cpp  TracingUtils.h
lib/DynamicAnalysis/test/: input.c  run-pass.sh  struct_integration_1.c
lib/ErrorAnalysis/: .gitignore  CMakeLists.txt  README.md
lib/ErrorAnalysis/ErrorPropagator/: AffineForms.cpp  AffineForms.h  CMakeLists.txt  ErrorPropagator.cpp  ErrorPropagator.h  FixedPoint.cpp  FixedPoint.h  FunctionCopyMap.cpp  FunctionCopyMap.h  FunctionErrorPropagator.cpp  FunctionErrorPropagator.h  MemSSARE.cpp  MemSSARE.h  MemSSAUtils.cpp  MemSSAUtils.h  Propagators.cpp  Propagators.h  PropagatorsUtils.cpp  RangeErrorMap.cpp  RangeErrorMap.h  SpecialFunctions.cpp  StructErrorMap.cpp  StructErrorMap.h
lib/ErrorAnalysis/PerformanceEstimator/: CMakeLists.txt  main_pe_train_regr.py  preprocess.py  taffo-pe.py
lib/ErrorAnalysis/test/: CMakeLists.txt  lit.site.cfg.py.in
lib/FloatSizeAnalysis/: CMakeLists.txt  README.md
lib/FloatSizeAnalysis/FloatSizeAnalysis/: CMakeLists.txt  FloatOpStats.h  FloatSizeAnalysis.cpp  FloatSizeAnalysis.h  FloatSizeAnalysisPass.cpp
lib/Initializer/: CMakeLists.txt  README.md
lib/Initializer/TaffoInitializer/: AnnotationParser.cpp  AnnotationParser.h  AnnotationParser.hpp  Annotations.cpp  CMakeLists.txt  CudaKernelPatcher.cpp  CudaKernelPatcher.h  CudaKernelPatcher.hpp  IndirectCallPatcher.cpp  IndirectCallPatcher.h  IndirectCallPatcher.hpp  ModuleCloneUtils.cpp  ModuleCloneUtils.h  OpenCLKernelPatcher.cpp  OpenCLKernelPatcher.h  OpenCLKernelPatcher.hpp  TaffoInitializerPass.cpp  TaffoInitializerPass.h  TaffoInitializerPass.hpp  handleHero.cpp  handleHero.h
lib/Initializer/test/: test1.ll  test2.c
lib/InstructionMix/: CMakeLists.txt  InstructionMix.cpp  InstructionMix.h
lib/RangeAnalysis/: .gitignore  CMakeLists.txt
lib/RangeAnalysis/TaffoVRA/: CMakeLists.txt  CodeInterpreter.cpp  CodeInterpreter.hpp  HeroCall.hpp  MemSSAUtils.cpp  MemSSAUtils.hpp  PtrCasts.hpp  Range.hpp  RangeNode.cpp  RangeNode.hpp  RangeOperations.cpp  RangeOperations.hpp  RangeOperationsCallWhitelist.cpp  RangeOperationsCallWhitelist.hpp  VRAFunctionStore.cpp  VRAFunctionStore.hpp  VRAGlobalStore.cpp  VRAGlobalStore.hpp  VRALogger.hpp  VRAStore.cpp  VRAStore.hpp  VRAnalyzer.cpp  VRAnalyzer.hpp  ValueRangeAnalysis.cpp  (+1 more)
lib/RangeExport/: CMakeLists.txt  README.md
lib/TaffoCommon/: CMakeLists.txt  MemSSAUtils.cpp  MemSSAUtils.hpp  MetadataManager.cpp  MetadataManager.hpp  PtrCasts.hpp  SerializationUtils.cpp  SerializationUtils.hpp  WriteModule.cpp  WriteModule.hpp
lib/TaffoConversion/: CMakeLists.txt  ConversionPass.cpp  ConversionPass.hpp  README.md  ValueConvInfoBuilder.cpp
lib/TaffoDTA/: .gitignore  AllocationStrategy.cpp  AllocationStrategy.hpp  CMakeLists.txt  DTAConfig.hpp  DataTypeAllocationPass.cpp  DataTypeAllocationPass.hpp  README.md
lib/TaffoInitializer/: .gitignore  AnnotationParser.cpp  Annotations.cpp  CMakeLists.txt  CudaKernelPatcher.hpp  IndirectCallPatcher.cpp  InitializerPass.cpp  InitializerPass.hpp
lib/TaffoMem2Reg/: CMakeLists.txt  Mem2Reg.cpp  Mem2Reg.h  Mem2Reg.hpp  PromoteMemToReg.cpp  PromoteMemToReg.h  PromoteMemToReg.hpp
lib/TaffoMemToReg/: CMakeLists.txt  MemToRegPass.cpp  MemToRegPass.hpp  PromoteMemToReg.cpp  PromoteMemToReg.hpp
lib/TaffoPosit/: CMakeLists.txt  TaffoPosit.cpp  posit.h  unpacked.h
lib/TaffoTypeDeducer/: CMakeLists.txt  TypeDeducerPass.cpp  TypeDeducerPass.hpp
lib/TaffoUtils/: BiMap.hpp  CMakeLists.txt  CallSiteVersions.h  DebugPrint.h  DebugUtils.h  HandleSpecialFunction.h  InputInfo.cpp  InputInfo.h  InsertionOrderedMap.hpp  LLVMVersions.cpp  LLVMVersions.h  Logger.cpp  Logger.hpp  MemSSAUtils.cpp  MemSSAUtils.hpp  Metadata.cpp  Metadata.h  MetadataManager.cpp  MetadataManager.hpp  ModuleCloneUtils.cpp  MultiValueMap.h  OpenMPAnalyzer.cpp  OpenMPAnalyzer.h  PtrCasts.hpp  SerializationUtils.hpp  TaffoMathUtil.h  TypeUtils.cpp  TypeUtils.h  WriteModule.cpp  WriteModule.h
lib/TypeDeducer/: CMakeLists.txt  DeducedPointerType.cpp  DeducedPointerType.hpp  TypeDeducerPass.cpp  TypeDeducerPass.hpp
test/: README  (+6 more)
tool/taffo-mlfeat/: CMakeLists.txt  TaffoMLFeaturesAnalysis.cpp  TaffoMLFeaturesAnalysis.h  taffo-mlfeat.cpp
unittests/Initializer/: CMakeLists.txt
unittests/RangeAnalysis/: CMakeLists.txt
(+2404 files in other folders)
